# agentes

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/agentes/agente_aulas_virtuales/: __init__.py  agent.py
app/agentes/agente_aulas_virtuales/prompts/: __init__.py  system_prompt.py
app/agentes/agente_aulas_virtuales/services/: __init__.py  config.py  moodle_cursos.py  moodle_eventos_curso.py
app/agentes/agente_aulas_virtuales/tools/: __init__.py  context.py  cursos.py  eventos.py  tiempo.py
app/agentes/agente_horarios/: __init__.py  agent.py
app/agentes/agente_horarios/prompts/: __init__.py  system_prompt.py
app/agentes/agente_horarios/services/: __init__.py  horario_actual.py
app/agentes/agente_horarios/tools/: __init__.py  tools.py
app/agentes/agente_info_personal/: __init__.py  agent.py
app/agentes/agente_info_personal/prompts/: __init__.py  system_prompt.py
app/agentes/agente_info_personal/services/: __init__.py  informacion_personal.py
app/agentes/agente_info_personal/tools/: __init__.py  tools.py
app/agentes/agente_notas/: __init__.py  agent.py
app/agentes/agente_notas/prompts/: __init__.py  system_prompt.py
app/agentes/agente_notas/services/: CalificacionesService.py  CreditosService.py  CursosService.py  HistorialService.py  PromedioService.py  __init__.py  config.py
app/agentes/agente_notas/tools/: CalificacionesTools.py  CreditosTools.py  CursosTools.py  HistorialTools.py  PromedioTools.py  __init__.py  context.py
app/agentes/agente_presupuesto/: __init__.py  agent.py  config_pre.py
app/agentes/agente_presupuesto/clase/: __init__.py  service.py  tools.py
app/agentes/agente_presupuesto/componente/: __init__.py  service.py  tools.py
app/agentes/agente_presupuesto/contrato/: __init__.py  service.py  tools.py
app/agentes/agente_presupuesto/cuenta/: __init__.py  service.py  tools.py
app/agentes/agente_presupuesto/dtsi/: __init__.py  service.py  tools.py
app/agentes/agente_presupuesto/estado/: __init__.py  service.py  tools.py
app/agentes/agente_presupuesto/negociacion/: __init__.py  service.py  tools.py
app/agentes/agente_presupuesto/orden/: __init__.py  service.py  tools.py
app/agentes/agente_presupuesto/origen/: __init__.py  service.py  tools.py
app/agentes/agente_presupuesto/otro_si/: __init__.py  service.py  tools.py
app/agentes/agente_presupuesto/presupuesto/: __init__.py  service.py  tools.py
app/agentes/agente_presupuesto/prompt/: __init__.py  system_prompt.py
app/agentes/agente_presupuesto/proveedor/: __init__.py  service.py  tools.py
app/agentes/agente_presupuesto/responsable/: __init__.py  service.py  (+1 more)
app/core/: agents_loader.py  config.py  logging.py
app/db/: connection.py  history.py  models.py
app/helpers/: agent_helpers.py
app/routes/: agents.py  info.py  openai_api.py
app/schemas/: requests.py  responses.py
app/services/: agents_loader.py  history.py
app/services/ai/: __init__.py  factory.py  gemini_model.py  hf_model.py  ollama_model.py  openai_model.py
docker/: Dockerfile  README.md  docker-compose.app.yml  docker-compose.db.yml
docs/: documentacion.docx  documentacion.md
(+3 files in other folders)
